# portfolio-risk-analytics

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: pipeline-health.yml  tests.yml
analytics/: backtest.py  drift.py  forecast.py  loader.py  metrics.py  montecarlo.py  optimize.py  realized.py  var_validation.py
api/: main.py
db/: database.py  models.py
ingestion/: base.py  demo.py  demo_seed.py  ecb.py  store.py  yahoo.py
reporting/: factsheet.py
tests/: conftest.py  test_api.py  test_app.py  test_backtest.py  test_cli.py  test_demo_seed.py  test_drift.py  test_ecb.py  test_factsheet.py  test_forecast.py  test_ingestion.py  test_metrics.py  test_montecarlo.py  test_optimize.py  test_realized.py  test_var_validation.py
