[project]
name = "portfolio-risk-analytics"
version = "1.4.0"
description = "Market data platform with a daily ingestion pipeline, PostgreSQL storage and portfolio risk analytics"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.1",
    "fpdf2>=2.8.7",
    "httpx>=0.28.0",
    "matplotlib>=3.11.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "plotly>=6.8.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.13.0",
    "sqlalchemy>=2.0.0",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "mypy>=2.0",
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "ruff>=0.15",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
# E501: line length is handled by the formatter
# B008: FastAPI's Depends() default-argument idiom is intentional
ignore = ["E501", "B008"]

[tool.mypy]
files = ["analytics", "api", "db", "ingestion", "reporting", "main.py", "app.py"]
python_version = "3.12"
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["pandas.*", "plotly.*", "matplotlib.*", "fpdf.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
